--- a/scss/style.scss
+++ b/scss/style.scss
@@ -954,6 +954,13 @@ button.owl-dot.active {
         font-weight: 500;
         border-radius: 30px;
     }
+    .tour_attribute_share a {
+        border: 1px solid #ff4a52;
+        padding: 4px 13px;
+        display: inline-block;
+        color: #ff4a52;
+        font-size: 12px;
+    }
 }
 
 
