css changes share tag

--- a/scss/_inner.scss
+++ b/scss/_inner.scss
@@ -176,6 +176,7 @@
             padding: 4px 13px;
             display: inline-block;
             color: #ff4a52;
+            font-size: 12px;
         }
     }
     .tour_attribute_link{
