--- a/scss/style.css
+++ b/scss/style.css
@@ -396,6 +396,7 @@
   padding: 4px 13px;
   display: inline-block;
   color: #ff4a52;
+  font-size: 12px;
 }
 .tour_attribute_wrapper .tour_attribute_link i {
   color: #4DA42F;
