--- a/scss/_inner.scss
+++ b/scss/_inner.scss
@@ -12,7 +12,7 @@
         height: 100%;
         background-color: #fbfbfbfb;
         // background-image: linear-gradient(transparent 0%, transparent 60%, rgba(0, 0, 0, 0.1) 66%, rgba(0, 0, 0, 0.5) 93%, rgba(0, 0, 0, 0.49) 100%);
-        background: rgba(0, 0, 0, 0.3803921569);
+        background: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(9, 9, 121, 0));
         z-index: 1;
     }
 
