--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,6 +124,7 @@ img.img {
 .navbar {
     // border-bottom: 1px solid $border-color;
     // padding: 0px!important ;
+    transition: top 0.3s;
     border-bottom: 1px solid #d9d9d9;
 
     img {
