--- a/scss/_inner.scss
+++ b/scss/_inner.scss
@@ -15,7 +15,7 @@
         background: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(9, 9, 121, 0));
         z-index: 1;
     }
-
+  
     &__navbar {
         position: absolute;
         left: 0;
@@ -33,8 +33,30 @@
         .breadcrumb-item+.breadcrumb-item::before {
             color: #fff;
         }
+        .quick-view{
+            position: absolute;
+            right: 20px;
+            bottom: 30px;
+            .quick-detail {
+                background: #030900a6;
+                padding: 5px 20px;
+                border-radius: 5px;
+                a{
+                    color: #fff;
+                    text-decoration: none;
+                }
+            }
+        }
+      
     }
-
+    .member-page{
+        .quick-view{
+            position: absolute;
+            right: 60px;
+            bottom: 100px;
+            
+        }
+    }
     img {
         width: 100%;
         height: 100%;
@@ -262,6 +284,8 @@
     h2{
         font-size: 20px;
         font-weight: 600;
+        border-bottom: 2px solid #4da42f;
+        padding-bottom: 15px;
         font-family: $font-poppins;
     }
     .trail-package{
