--- a/scss/style.css
+++ b/scss/style.css
@@ -1176,6 +1176,14 @@ img.img {
   color: #000000;
   font-weight: 500;
   border-radius: 30px;
+  position: relative;
+  background: linear-gradient(to left, #ffffff 50%, #1D8348 50%) right;
+  background-size: 200%;
+  transition: 0.5s ease-out;
+}
+.navbar .btn-login:hover {
+  background-position: left;
+  color: #fff;
 }
 .navbar .btn-signup {
   padding: 10px 30px;
@@ -1246,9 +1254,9 @@ img.img {
   border: 1px solid #D9D9D9;
   border-radius: 40px;
   display: flex;
-  width: 100%;
+  width: 90%;
   max-width: 100%;
-  line-height: 50px;
+  line-height: 48px;
   background: #ffffff;
 }
 .banner .member__search #searchInput {
@@ -1267,7 +1275,7 @@ img.img {
 }
 .banner .member__search b {
   padding: 0px 8px 0px 15px;
-  font-size: 24px;
+  font-size: 18px;
   color: #495057;
 }
 .banner .member__search--input-type {
@@ -1522,7 +1530,7 @@ button.owl-dot.active {
   left: 0;
   top: 0;
   right: 0;
-  box-shadow: inset 6px -200px 157px -10px rgba(0, 0, 0, 0.74);
+  box-shadow: inset 6px -101px 34px -25px rgba(0, 0, 0, 0.74);
   padding: 20px 20px;
   text-align: center;
   color: #FFFFFF;
@@ -1545,89 +1553,6 @@ button.owl-dot.active {
   color: #fff;
   margin-bottom: 0px;
   padding-bottom: 0px;
-}
-
-.blog__details .owl-nav button {
-  position: absolute;
-  top: 0%;
-  right: 30px;
-}
-.blog__details .owl-nav {
-  position: absolute;
-  right: 30px;
-  top: -50px;
-}
-.blog__details__list__box {
-  border: 1px solid #D9D9D9;
-  border-radius: 20px;
-  overflow: hidden;
-  background-color: #F2F4F4;
-}
-.blog__details__list__box .logo-img {
-  height: 100%;
-}
-.blog__details__list__box .logo-img img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.blog__details__list__box .blog-text {
-  height: 100%;
-  padding: 30px 20px;
-}
-.blog__details__list__box .blog-text h3 {
-  margin-bottom: 15px;
-  line-height: 36px;
-}
-.blog__details__list__box .blog-text p {
-  line-height: 26px;
-  margin: 16px 0px;
-  font-family: "Roboto", sans-serif;
-}
-.blog__details__list__box span {
-  display: block;
-  font-size: 16px;
-  /* font-weight: 500; */
-  margin-bottom: 15px;
-  color: #343a40;
-}
-
-.news__details__list__box {
-  border: 1px solid #D9D9D9;
-  border-radius: 20px;
-  overflow: hidden;
-}
-.news__details__list__box .logo-img {
-  height: 100%;
-}
-.news__details__list__box .logo-img img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.news__details__list__box .news-text {
-  height: 100%;
-  padding: 30px 20px;
-}
-.news__details__list__box .news-text h3 {
-  margin-bottom: 15px;
-  line-height: 36px;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
-}
-.news__details__list__box .news-text p {
-  line-height: 26px;
-  margin: 16px 0px;
-  font-family: "Roboto", sans-serif;
-}
-.news__details__list__box span {
-  display: block;
-  font-size: 16px;
-  /* font-weight: 500; */
-  margin-bottom: 15px;
-  color: #343a40;
 }
 
 .faq .accordion-button:not(.collapsed) {
@@ -1992,6 +1917,8 @@ button.owl-dot.active {
     visibility: visible;
     transform: translateY(0);
     transition: all 0.3s ease;
+    border-top: 3px solid #008929;
+    overflow: hidden;
   }
   .navbar .dropdown-menu {
     display: block;
