--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@ sans-serif;
 
 body {
     font-family: $font-roboto;
+    position: relative;
 }
 
 .b-member {
@@ -173,12 +174,14 @@ img.img {
         background-color: $primary-color;
         border-radius: 30px;
         position: relative;
-        background: linear-gradient(to left, #4DA42F 50%, #1D8348 50%) right;
+        background: linear-gradient(to left, #4DA42F 50%, #ffffff 50%) right;
         background-size: 200%;
         transition: .5s ease-out;
 
         &:hover {
             background-position: left;
+            border: 1px solid #4DA42F;
+            color: #000000;
         }
     }
 
@@ -455,13 +458,61 @@ button.owl-dot.active {
 }
 
 // owl slider css end
-.member-menu {
-    .member-count{
+.scrollToTop {
+    position: fixed;
+    right: 30px;
+    bottom: 500px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease 0.4s;
+    z-index: 96;
+}
+.scrollToTop.show {
+    bottom: 60px;
+    opacity: 1;
+    visibility: visible;
+}
+
+.scroll-btn{
+    &::before {
+        content: "";
+        position: absolute;
+        left: var(--extra-shape, -6px);
+        top: var(--extra-shape, -6px);
+        right: var(--extra-shape, -6px);
+        bottom: var(--extra-shape, -6px);
+        background-color: transparent;
+        border-radius: 50%;
+        z-index: 1;
+        border: 2px dashed $primary-color;
+        transition: all ease 0.4s;
+        animation: spin 13s infinite linear;
+    }
+   
+    i {
+        display: inline-block;
+        background-color: $primary-color;
+        color: #fff;
+        text-align: center;
+        font-size: 16px;
+        width: var(--btn-size, 50px);
+        height: var(--btn-size, 50px);
+        line-height: var(--btn-size, 50px);
+        z-index: 2;
+        border-radius: 50%;
+        position: relative;
+        transition: all ease 0.8s;
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.02);
+    }
+    
+}
+
+.sub-menu {
+    .sub-count{
         background: $primary-color;
         padding: 20px;
         display: flex;
         justify-content: center;
-        align-items: center;
         width: 100px;
         height: 100%;
         a{
@@ -472,22 +523,26 @@ button.owl-dot.active {
         text-decoration: none;
         
     }
-    &.member-menu-items{
-        width: 300px!important;
+    &.sub-menu-items{
+        width: 350px!important;
         a{
             display: block;
             line-height: 36px;
             font-weight: 600;
             font-size: 16px;
-            color: $black-color;
+            color: #000000;
             text-decoration: none;
             border-bottom: 1px solid #f1f1f1;
             transition: 0.3s ease;
+            padding: 4px 20px;
+        
             &:first-child{
                 border-top: 1px solid #f1f1f1;
             }
             &:hover{
                 color: $primary-color;
+                color: #ffffff;
+                background: $primary-color;
             }
         }
     }
@@ -928,6 +983,8 @@ button.owl-dot.active {
 
     &__wrapper {
         position: relative;
+        overflow: hidden;
+      
     }
 
     &__play-icon {
@@ -968,15 +1025,14 @@ button.owl-dot.active {
             &::after {
                 position: absolute;
                 content: "";
-                top: calc(50% - 40px);
-                left: calc(50% - 40px);
-                width: 80px;
-                height: 80px;
+                /* top: calc(50% - 40px); */
+                /* left: calc(50% - 40px); */
+                width: 60px;
+                height: 60px;
                 border: 1px solid #fff;
                 border-radius: 50%;
                 animation: zoominout 2s infinite linear alternate-reverse;
-                -webkit-transition: .3s linear color;
-                transition: .3s linear color;
+                transition: 0.3s linear color;
                 z-index: 1;
             }
             
@@ -993,7 +1049,10 @@ button.owl-dot.active {
                 font-size: 1.75rem;
                 z-index: 2;
                 position: relative;
-                color: #4da42f;
+                color: #ffffff;
+                background: #4da42f;
+                padding: 10px;
+                border-radius: 50%;
             }
         }
 
