--- a/scss/style.css
+++ b/scss/style.css
@@ -1427,6 +1427,12 @@ button.owl-dot.active {
   margin-top: 20px;
 }
 
+.trip-advisor {
+  background: #f2f7f1;
+  border-radius: 20px;
+  border: 1px solid #d9d9d9;
+}
+
 .scrollToTop {
   position: fixed;
   right: 30px;
@@ -1710,8 +1716,11 @@ button.owl-dot.active {
   font-size: 35px;
   font-family: "Taviraj", serif;
 }
+.taan-support .support .support-message h4 {
+  font-family: "Taviraj", serif;
+}
 .taan-support .support .support-message p {
-  font-size: 20px;
+  font-size: 18px;
   padding-top: 15px;
 }
 .taan-support .support .support-message button {
