--- a/scss/style.scss
+++ b/scss/style.scss
@@ -458,6 +458,11 @@ button.owl-dot.active {
 }
 
 // owl slider css end
+.trip-advisor {
+    background: #f2f7f1;
+    border-radius: 20px;
+    border: 1px solid #d9d9d9;
+}
 .scrollToTop {
     position: fixed;
     right: 30px;
@@ -930,9 +935,12 @@ button.owl-dot.active {
                 font-size: 35px;
                 font-family: $font-taviraj;
             }
+            h4{
+                font-family: $font-taviraj;
+            }
 
             p {
-                font-size: 20px;
+                font-size: 18px;
                 padding-top: 15px;
             }
 
