--- a/scss/_trail-profile.scss
+++ b/scss/_trail-profile.scss
@@ -221,17 +221,24 @@
             height: 100%;
             border-radius: 5px;
             overflow: hidden;
+            &:hover{
+                img {
+                    transform: scale(1.1);
+                    transition: 0.5s ease-in-out;
+                }
+               
+            }
 
                 .logo-img {
                     height: 100%;
                     height: 200px;
                     position: relative;
-                  
-
+                    overflow: hidden;
                     img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                        transition: 0.5s ease-in-out;
                     }
                 }
 
