--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@ sans-serif;
 $font-poppins: "Poppins",
 sans-serif;
 @import 'trail-profile';
+@import 'about-us';
 @import 'inner';
 @import 'itinery';
 @import 'sidebar';
