--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,7 +114,7 @@ p {
     font-size: 18px;
     padding-top: 0px;
     margin-top: 0px;
-    font-family: "Mulish", sans-serif;
+    // font-family: "Mulish", sans-serif;
 }
 
 .news-img img {
